[tool.poetry]
name = "tweet-analizer"
version = "0.1.0"
description = ""
authors = ["hyde2000"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.71.0"
requests-oauthlib = "^1.3.0"
requests = "^2.27.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
